# GSI-sMINRES

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  blas_8hpp.html  blas_8hpp__dep__incl.map  blas_8hpp__dep__incl.md5  blas_8hpp__incl.map  blas_8hpp__incl.md5  blas_8hpp_source.html  blas__zhpmv_8hpp.html  blas__zhpmv_8hpp__dep__incl.map  blas__zhpmv_8hpp__dep__incl.md5  blas__zhpmv_8hpp__incl.map  blas__zhpmv_8hpp__incl.md5  blas__zhpmv_8hpp_source.html  cg_8cpp.html  cg_8cpp__incl.map  cg_8cpp__incl.md5  cg_8hpp.html  cg_8hpp__dep__incl.map  cg_8hpp__dep__incl.md5  cg_8hpp__incl.map  cg_8hpp__incl.md5  cg_8hpp_source.html  classes.html  classgsi__sminres_1_1generalized_1_1Solver-members.html  classgsi__sminres_1_1generalized_1_1Solver.html  classgsi__sminres_1_1shift__invert_1_1Solver-members.html  classgsi__sminres_1_1shift__invert_1_1Solver.html  classgsi__sminres_1_1standard_1_1Solver-members.html  classgsi__sminres_1_1standard_1_1Solver.html  csr_8hpp.html  csr_8hpp__dep__incl.map  csr_8hpp__dep__incl.md5  csr_8hpp__incl.map  csr_8hpp__incl.md5  csr_8hpp_source.html  dir_000001_000012.html  (+157 more)
.github/workflows/: deploy-docs.yml
cmake/: gsi_sminresConfig.cmake.in
docs/: algorithm-gen.dox  algorithm-sis.dox  algorithm-std.dox  algorithms.dox  behavior.dox  license.dox  mainpage.dox  overview.dox  sminres.dox
docs/img/: mermaid-code.txt
examples/: Makefile  a_std_csr.out  a_std_zhp.out  example_gen_csr.cpp  example_gen_csr_r.cpp  example_gen_zhp.cpp  example_sis_csr.cpp  example_sis_csr_r.cpp  example_sis_zhp.cpp  example_std_csr.cpp  example_std_csr_r.cpp  example_std_zhp.cpp  exec.sh
examples/data/: ELSES_MATRIX_DIAB18h_A.mtx  ELSES_MATRIX_DIAB18h_B.mtx  download.sh
include/gsi_sminres/: gsi_sminres.hpp
include/gsi_sminres/algorithms/: generalized_shifted_minres.hpp  shift_invert_shifted_minres.hpp  standard_shifted_minres.hpp
include/gsi_sminres/extras/algorithms/: cg.hpp  minres_pencil.hpp
include/gsi_sminres/extras/io/: mm_csr.hpp  mm_zhp.hpp
include/gsi_sminres/extras/sparse/: csr.hpp  spmv.hpp
include/gsi_sminres/linalg/: blas.hpp  blas_zhpmv.hpp  lapack.hpp
search/: all_1.js  all_2.js  all_3.js  all_5.js  all_7.js  all_8.js  all_b.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
src/algorithms/: generalized_shifted_minres.cpp  shift_invert_shifted_minres.cpp  standard_shifted_minres.cpp
src/extras/algorithms/: cg.cpp  minres_pencil.cpp
src/extras/io/: mm_csr.cpp  mm_zhp.cpp
